# direct_parser

./: Cargo.toml
src/: main.rs
src/db/: get_client_table.rs  insert_stat_client.rs  mod.rs
src/models/: client_stat.rs  convert_tvs.rs  mod.rs
src/utils/: create_table.rs
