[package]
name = "parser_direct_api"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
reqwest = "0.12.5"
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors"] }
axum = "0.7.5"
cron = "0.12.1"